--- a/content/docs/test.mdx
+++ b/content/docs/test.mdx
@@ -5,13 +5,17 @@ description: Components
 
 ## Code Block
 
+Without some text content, fumadocs doesn't upload anything to algolia
+
 ```js
-console.log('Hello World');
+console.log("Hello World")
 ```
 
 ## Cards
 
+A `<Cards>` component exists
+
 <Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
+	<Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
+	<Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
 </Cards>
