default description meta doesn't work since we only have mdx pages

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Hello World
-description: Your first document
+description: The offline-first fullstack PWA template.
 icon: GitCompareArrows
 ---
 
