--- a/content/docs/test.mdx
+++ b/content/docs/test.mdx
@@ -3,6 +3,8 @@ title: Components
 description: Components
 ---
 
+import { Cards, Card } from "fumadocs-ui/components/card"
+
 ## Code Block
 
 Without some text content, fumadocs doesn't upload anything to algolia
@@ -16,6 +18,6 @@ console.log("Hello World")
 A `<Cards>` component exists
 
 <Cards>
-	<Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-	<Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
+	<Card title="Learn more about Next.js" href="https://nextjs.org/docs" description="" />
+	<Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" description="" />
 </Cards>
