--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -4,11 +4,13 @@ description: The offline-first fullstack PWA template.
 icon: GitCompareArrows
 ---
 
+import { Cards, Card } from "fumadocs-ui/components/card"
+
 Welcome to the docs! You can start writing documents in `/content/docs`.
 
 ## What is Next?
 
 <Cards>
-	<Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-	<Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
+	<Card title="Learn more about Next.js" href="https://nextjs.org/docs" description="" />
+	<Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" description="" />
 </Cards>
