no defaultOpen on packages of homepage

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -13,30 +13,30 @@ import { File, Files } from "fumadocs-ui/components/files"
 A mono-repo structure, with the following packages:
 
 <Files>
-	<File title="client" defaultOpen>
+	<File title="client">
 		<File title="src" defaultOpen>
 			<File title="App.tsx" />
 		</File>
 		<File title="index.html" />
 		<File title="main.tsx" />
 	</File>
-	<File title="server" defaultOpen>
+	<File title="server">
 		<File title="src" defaultOpen>
 			<File title="app.ts" />
 		</File>
 	</File>
-	<File title="worker" defaultOpen>
+	<File title="worker">
 		<File title="src" defaultOpen>
 			<File title="index.ts" />
 		</File>
 	</File>
-	<File title="script" defaultOpen>
+	<File title="script">
 		<File title="src" children={[]} />
 	</File>
-	<File title="shared" defaultOpen>
+	<File title="shared">
 		<File title="src" children={[]} />
 	</File>
-	<File title="assets" defaultOpen>
+	<File title="assets">
 		<File title="src" children={[]} />
 	</File>
 </Files>
