add a "use this template" button

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -7,6 +7,22 @@ icon: TreeDeciduous
 import { Cards, Card } from "fumadocs-ui/components/card"
 import { Monitor, Server, WifiOff } from "lucide-react"
 import { File, Files } from "fumadocs-ui/components/files"
+import { ActionButton } from "components/ActionButton"
+
+## Quick Start
+
+<ActionButton
+	href="https://github.com/new?template_name=root&template_owner=Sheraff"
+	label="Use this template"
+	target="_blank"
+/>
+
+Then in the repo, run
+
+```bash
+pnpm i
+pnpm dev
+```
 
 ## Structure
 
