--- a/content/docs/server/security-headers.mdx
+++ b/content/docs/server/security-headers.mdx
@@ -22,7 +22,7 @@ If you are confident that this will _always_ be the case, you can add the `prelo
 Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
 ```
 
-## Content Security Policy
+## Content-Security-Policy
 
 The [Content-Security-Policy](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy) header tells the browser which resources are allowed to be loaded on the page. This can help prevent XSS attacks.
 
