dev server processes exhaustive list

--- a/content/docs/dx/dev-server.mdx
+++ b/content/docs/dx/dev-server.mdx
@@ -39,7 +39,7 @@ This long chain of requests is necessary to have a good HRM experience for both 
 ## dev processes
 
 -   `/script` 1-time esbuild for vite/esbuild plugins
--   `/client` vite server + proxy server
+-   `/client` vite server + proxy server + CSS module types generation
 -   `/assets` esbuild watch
 -   `/worker` esbuild watch
 -   `/server` esbuild watch + proxy server
