--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -5,7 +5,7 @@ icon: TreeDeciduous
 ---
 
 import { Cards, Card } from "fumadocs-ui/components/card"
-import { Monitor, Server, WifiOff } from "lucide-react"
+import { Monitor, Server, WifiOff, Code2 } from "lucide-react"
 import { File, Files } from "fumadocs-ui/components/files"
 import { ActionButton } from "components/ActionButton"
 
@@ -137,5 +137,11 @@ import { CardGrid, CardGridItem } from "components/CardGrid"
 		href="./service-worker"
 		description="Learn more about service-worker capabilities"
 		icon={<WifiOff />}
+	/>
+	<Card
+		title="Developer Experience"
+		href="./dx"
+		description="Learn more about the developer experience of this framework"
+		icon={<Code2 />}
 	/>
 </Cards>
