--- a/content/docs/dx/dev-server.mdx
+++ b/content/docs/dx/dev-server.mdx
@@ -10,7 +10,7 @@ import { Step, Steps } from "fumadocs-ui/components/steps"
 
 In production, all requests hit the server. Requests asking for client assets are simply served statically built files.
 
-In development, most of the work is done by Vite for a better Hot Module Replacement (HRM) experience. So requests asking for client assets are served by Vite, and requests aiming at the server are proxied
+In development, most of the work is done by Vite for a better Hot Module Replacement (HMR) experience. So requests asking for client assets are served by Vite, and requests aiming at the server are proxied
 
 <Steps>
 	<Step>
@@ -31,15 +31,40 @@ In development, most of the work is done by Vite for a better Hot Module Replace
 
 </Steps>
 
-This long chain of requests is necessary to have a good HRM experience for both the client and the server.
+This long chain of requests is necessary to have a good HMR experience for both the client and the server.
 
--   most requests are served by Vite, which has a very good HRM
--   if the server is currently restarting (there is no HRM for the server, only restarts), the server proxy will stall the request until the server is ready again
+-   most requests are served by Vite, which has a very good HMR
+-   if the server is currently restarting (there is no HMR for the server, only restarts), the server proxy will stall the request until the server is ready again
 
 ## dev processes
 
--   `/script` 1-time esbuild for vite/esbuild plugins
--   `/client` vite server + proxy server + CSS module types generation
--   `/assets` esbuild watch
--   `/worker` esbuild watch
--   `/server` esbuild watch + proxy server
+### Before starting
+
+#### `/script`
+
+-   1-time `esbuild` process for bundling dev plugins
+
+### During development
+
+#### `/client`
+
+-   `vite` dev server + `vite` proxy server (1)
+-   `tcm` CSS module types generation (1)
+
+#### `/assets`
+
+-   `tsx` launches a `chokidar`watcher (3)
+
+#### `/worker`
+
+-   `tsx` launches an `esbuild` watcher (3)
+
+#### `/server`
+
+-   `tsx` launches an `esbuild` (2)
+-   on build, `esbuild` spawns the app server (1)
+-   fastify proxy server (1)
+
+#### `/`
+
+-   `turbo` launches some processes (4)
