give up on drizzle for now

--- a/content/docs/server/databases.mdx
+++ b/content/docs/server/databases.mdx
@@ -11,5 +11,5 @@ SQLite is cheap, create as many databases as you want. It's a good way to separa
 CRDTs are a good way to handle distributed data, this is what allows us to have an SQLite database on each device and to synchronize them. Those local replicas are read-write as much as the ones on the server.
 
 <Callout title="Todo" type="warn">
-	Handle migrations (with Drizzle ORM, and Drizzle CLI)
+	Handle migrations
 </Callout>
