--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -20,6 +20,7 @@ import { ActionButton } from "components/ActionButton"
 Then in the repo, run
 
 ```bash
+cp .env.example .env
 pnpm i
 pnpm dev
 ```
