--- a/content/docs/server/api.mdx
+++ b/content/docs/server/api.mdx
@@ -4,6 +4,9 @@ description: Foo michel
 icon: Cable
 ---
 
+import { Cards, Card } from "fumadocs-ui/components/card"
+import { Cable } from "lucide-react"
+
 Type-safe API server with JSON schema validation.
 
 ```ts
@@ -57,8 +60,17 @@ export const handler = procedure(schema, tracksRoute, {
 })
 ```
 
-[See usage of this route definition in `/client`.](../client/api)
-
 With Fastify, using a JSON schema to validate the inputs and outputs makes the requests have 10-20% more throughput <sup>[1](https://fastify.dev/docs/latest/Reference/Routes/#routes-options)</sup>. And using our own `define` and `procedure` functions we can use the same schema to provide type safety on the client side and on the server side.
 
 Under the hood, fastify uses [Ajv](https://ajv.js.org/) to validate the schema at runtime, and we use [json-schema-to-ts](https://github.com/ThomasAribart/json-schema-to-ts) to obtain TypeScript types from the schemas.
+
+## See also
+
+<Cards>
+	<Card
+		title="Client API"
+		href="../client/api"
+		description="See how to use the API route definitions in the client."
+		icon={<Cable />}
+	/>
+</Cards>
