--- a/content/docs/service-worker/offline.mdx
+++ b/content/docs/service-worker/offline.mdx
@@ -5,9 +5,11 @@ icon: WifiOff
 ---
 
 import { Cards, Card } from "fumadocs-ui/components/card"
-import { Database } from "lucide-react"
+import { Database, Webhook } from "lucide-react"
 
-The Service Worker caches all of the static assets so the app can be used offline. In combination with the [client database](../client/database) and [push messaging](./push-messaging.mdx), the app can be used offline and sync data when the connection is back.
+When installing, the Service Worker caches all of the static assets the app needs to run, so that once it is activated the app can be used offline.
+
+We also provide a [client database](../client/database) and [asynchronous push messaging](./push-messaging), to ensure eventual consistency between the client and the server.
 
 ## See also
 
@@ -19,9 +21,9 @@ The Service Worker caches all of the static assets so the app can be used offlin
 		icon={<Database />}
 	/>
 	<Card
-		title="Client DB"
-		href="../client/database"
+		title="Push Messaging"
+		href="../service-worker/push-messaging"
 		description="Receiving event when the connection is back with push messaging"
-		icon={<Database />}
+		icon={<Webhook />}
 	/>
 </Cards>
